--- a/styles/main.css
+++ b/styles/main.css
@@ -160,6 +160,36 @@ a.anchor {
 	visibility: hidden;
 }
 
+/* Skills Chart*/
+.yLabel text {
+	  fill: #f2f2f2;
+  }
+  
+  .xLabel text {
+	  fill: black;
+  }
+  
+  .yLabel text, .xLabel text {
+	  alignment-baseline: central;
+	  font-family: 'Helvetica', 'Arial', sans-serif;
+	  font-size: 12px;
+	  
+	  cursor : default;
+	  pointer-events: none
+	  
+	  -webkit-touch-callout: none; /* iOS Safari */
+	  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+	  -khtml-user-select: none;    /* Konqueror */
+	  -moz-user-select: none;      /* Firefox */
+	  -ms-user-select: none;       /* Internet Explorer/Edge */
+	  user-select: none;           /* Non-prefixed version, currently
+									  not supported by any browser */
+  }
+  
+  p.descriptionParagraph {
+	  display: none;
+  }
+
 
 
 
