--- a/styles/main.css
+++ b/styles/main.css
@@ -163,32 +163,31 @@ a.anchor {
 /* Skills Chart*/
 .yLabel text {
 	  fill: #f2f2f2;
-  }
+}
   
-  .xLabel text {
-	  fill: black;
-  }
+.xLabel text {
+  fill: black;
+}
+
+.yLabel text, .xLabel text {
+  alignment-baseline: central;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  font-size: 12px;
   
-  .yLabel text, .xLabel text {
-	  alignment-baseline: central;
-	  font-family: 'Helvetica', 'Arial', sans-serif;
-	  font-size: 12px;
-	  
-	  cursor : default;
-	  pointer-events: none
-	  
-	  -webkit-touch-callout: none; /* iOS Safari */
-	  -webkit-user-select: none;   /* Chrome/Safari/Opera */
-	  -khtml-user-select: none;    /* Konqueror */
-	  -moz-user-select: none;      /* Firefox */
-	  -ms-user-select: none;       /* Internet Explorer/Edge */
-	  user-select: none;           /* Non-prefixed version, currently
-									  not supported by any browser */
-  }
+  cursor : default;
+  pointer-events: none
   
-  p.descriptionParagraph {
-	  display: none;
-  }
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently
+								  not supported by any browser */
+}
+
+p#descriptionParagraph {
+}
 
 
 
