--- a/resources/assets/sass/exoplanetViz.scss
+++ b/resources/assets/sass/exoplanetViz.scss
@@ -3,6 +3,14 @@
 	margin: auto auto; 
 }
 
+.container {
+	width: 80%;
+}
+
+.jumbotron {
+	min-width: 1800px;	
+}
+
 #xAxisTitle {
 	font-size: 16px;
 	font-weight: bold;
@@ -45,7 +53,6 @@
 	width: 300px;
 }
 
-
 h1 {
 	font: 20px;
 	text-align: center;
@@ -80,22 +87,3 @@ table, th, td {
 	fill: white;
 }
 
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
-
-/*# sourceMappingURL=exoplanetViz.css.map */
