--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -7,6 +7,7 @@
 @import "_footer.scss";
 
 @import "_skillChart.scss";
+@import "_exoplanetViz.scss";
 
 body {
 	position: relative;
@@ -35,7 +36,12 @@ body {
 	
 		}
 	}
+	
+	.container-exoplanets {
+		width: 1750px;
+	}
 }
+
 
 
 
