--- a/public/site.css
+++ b/public/site.css
@@ -93,6 +93,7 @@ body div.heading {
 	}
 body hr {
     width: 60vw;
+    min-width: 350px;
     border: 0;
     border-top: 1px solid #da645d;
 	}
@@ -107,6 +108,7 @@ body .footer {
     flex-direction: column;
     align-items: center;
     width: 100vw;
+    margin-top: 1em;
     background-color: #4e4e56;
     color: #f2f2f2;
   }
@@ -116,12 +118,20 @@ body .container-exoplanets {
 body .navbar {
     display: flex;
     align-items: center;
+    justify-content: center;
+    position: fixed;
     width: 100vw;
     background-color: #4e4e56;
     color: #da645d;
   }
 body .navbar-header {
       padding-left: 1em;
+    }
+body .navbar-content {
+      display: flex;
+      align-items: center;
+      width: 60vw ;
+      min-width: 350px;
     }
 body .navbar-sections {
      display: flex;
@@ -140,6 +150,7 @@ body .navbar-sections li a {
           align-items: center;
           height: 100%;
           padding: 0 1em;
+          color: #f2f2f2;
           text-decoration: none;
           transition: all .2s linear
         }
@@ -149,26 +160,39 @@ body .navbar-sections li a:hover {
 }
 body section {
     width: 60vw;
+    min-width: 350px;
   }
-body #summary {
+body .summary {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2em;
+    margin-top: 3em;
     background-color: #4e4e56;
     color: #da645d;
     border-radius: 5px;
   }
-body #summary .profile-pic-container {
+body .summary .profile-pic-container {
       display: flex;
       align-items: center;
       justify-content: center;
       margin: 5em 0;
+      padding: 0 2em;
+      width: 20%;
     }
-body #summary .profile-pic-container img {
-        width: 40%;
+body .summary .profile-pic-container img {
+        width: 100%;
         border: solid 2px #f2f2f2;
         border-radius: 5px;
+      }
+body .summary-content {
+      flex: 2;
+    }
+body .summary-content h1 {
+        font-size: 2em;
+        text-align: initial;
+      }
+body .summary-content h3 {
+        font-size: 1.5em;
       }
 body .resume-section {
     display: flex;
