--- a/src/css/site.css
+++ b/src/css/site.css
@@ -19,6 +19,7 @@ body {
 	
 	hr {
     width: 60vw;
+    min-width: 350px;
     border: 0;
     border-top: 1px solid $content-secondary;
 	}
@@ -37,6 +38,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100vw;
+    margin-top: 1em;
     background-color: $content-tertiary;
     color: $content-primary;
   }
@@ -48,12 +50,21 @@ body {
   .navbar {
     display: flex;
     align-items: center;
+    justify-content: center;
+    position: fixed;
     width: 100vw;
     background-color: $content-tertiary;
     color: $content-secondary;
 
     &-header {
       padding-left: 1em;
+    }
+
+    &-content {
+      display: flex;
+      align-items: center;
+      width: 60vw ;
+      min-width: 350px;
     }
 
     &-sections {
@@ -73,6 +84,7 @@ body {
           align-items: center;
           height: 100%;
           padding: 0 1em;
+          color: $content-primary;
           text-decoration: none;
           transition: all .2s linear;
 
@@ -87,13 +99,14 @@ body {
 
   section {
     width: 60vw;
+    min-width: 350px;
   }
 
-  #summary {
+  .summary {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2em;
+    margin-top: 3em;
     background-color: $content-tertiary;
     color: $content-secondary;
     border-radius: 5px;
@@ -103,11 +116,26 @@ body {
       align-items: center;
       justify-content: center;
       margin: 5em 0;
+      padding: 0 2em;
+      width: 20%;
 
       img {
-        width: 40%;
+        width: 100%;
         border: solid 2px $content-primary;
         border-radius: 5px;
+      }
+    }
+    
+    &-content {
+      flex: 2;
+
+      h1 {
+        font-size: 2em;
+        text-align: initial;
+      }
+
+      h3 {
+        font-size: 1.5em;
       }
     }
   }
